updated problem description part

--- a/main.tex
+++ b/main.tex
@@ -31,17 +31,14 @@ To analyze these, numerous graph algorithms have been proposed. Among the most i
  
 
 \section{Problem Description}
-The fast expansion of the world wide web during the late 1990's presented a significant challenge for the information retrieval cite. With the launch of Google in 1998 cite, PageRank was introduced as a core component of the search engine cite. PageRank is an algorithm that is ranking web pages by measuring their relative importance based on the graph of the web \cite{page_pagerank_1999}. The node of the graph are the web pages while the edges represent links. An outedge is a link on a website and an inedge is a backlink \cite{page_pagerank_1999}. A page is considered important if it has inedges from important pages. The value of a web page is calculated recursively based on the values of all pages linking to it. Linking pages pass a fraction of its own value, proportional to its number of outedges, to the target page. This is an iterative calculation with a damping factor that converges to a stable probability distribution \cite{page_pagerank_1999}. 
-Today PageRank is used, not only in search engines, but in a wide range of applications such as social networks \cite{wu_efficient_2024}. The latter utilizes PageRank to identify influential, rank content in feeds and recommend people.
-
-
-Many domains such as search engines, recommendation systems and social networks use PageRank. The algorithm measures the importance of websites \cite{wu_efficient_2024}. However, research shows that most implementations of the algorithm are inefficient when applied to large scale graphs due to a huge computational overhead \cite{wu_efficient_2024}\cite{jayaram_dynamic_2024}\cite{yang_efficient_2024}. GraphX's PageRank comes with a static and dynamic version \cite{xin_graphx_2013}. Static PageRank runs for a fixed number of iterations, while dynamic PageRank runs until the ranks converge \cite{xin_graphx_2013}. In both implementations, power iteration is used to update values \cite{xin_graphx_2013}, which requires many passes over the graph, resulting in costly matrix operations.  A fundamental challenge lies in the graph representation itself \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which require up to $O(n^2)$ of memory in the worst case \cite{wu_efficient_2024}. The transition matrix becomes a significant memory bottleneck with the increasing size of graphs, which makes it more impractical to directly store or process the whole graph. Therefore efficient models that avoid full matrix construction and instead rely on approximations are necessary \cite{liu_fast_2015}.
+The rapid expansion of the World Wide Web during the late 1990's presented a significant challenge for the information retrieval cite. With the launch of Google in 1998 cite, PageRank was introduced as a core component of the search engine cite. PageRank is an algorithm that is ranking web pages by measuring their relative importance based on the graph of the web \cite{page_pagerank_1999}. The node of the graph are the web pages while the edges represent links. An outedge is a link on a website and an inedge is a backlink \cite{page_pagerank_1999}. A page is considered important if it has inedges from important pages. The value of a web page is calculated recursively based on the values of all pages linking to it. Linking pages pass a fraction of its own value, proportional to its number of outedges, to the target page. This is an iterative calculation with a damping factor that converges to a stable probability distribution \cite{page_pagerank_1999}. 
+Today PageRank is used, not only in search engines, but in a wide range of applications such as social networks \cite{wu_efficient_2024}. The latter utilizes PageRank to identify influential users, rank content in feeds and recommend people \cite{weng_twitterrank_2010}. Despite its wide applicability, a fundamental challenge lies in the graph representation \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which in the worst case require up to $O(n^2)$ of memory \cite{wu_efficient_2024}. The transition matrix stores the probabilities of moving from one web page to another in one single step. It becomes a significant memory bottleneck as the size of the graph increases, making it impractical to directly store or process the entire graph. GraphX's PageRank comes with a static and a dynamic version \cite{xin_graphx_2013}. Static PageRank runs for a fixed number of iterations, while dynamic PageRank runs until the ranks converge \cite{xin_graphx_2013}. Both implementations use power iteration to update values \cite{xin_graphx_2013}, which requires many passes over the graph, resulting in expensive matrix operations. % A fundamental challenge lies in the graph representation itself \cite{liu_fast_2015}. Typically, graphs are represented in matrices, which in the worst case require up to $O(n^2)$ of memory \cite{wu_efficient_2024}. The transition matrix becomes a significant memory bottleneck as the size of the graph increases, making it impractical to directly store or process the entire graph. Therefore, efficient models that avoid full matrix construction and instead rely on approximations are needed \cite{liu_fast_2015}.
+%However, research shows that most implementations of the algorithm are inefficient when applied to large scale graphs due to a huge computational overhead \cite{wu_efficient_2024}\cite{jayaram_dynamic_2024}\cite{yang_efficient_2024}. 
 
 
 
 \section{State of the Art}
-Today there are many approximate PageRank implementations that address the computational overhead in the original implementation \cite{wu_efficient_2024}. They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing much \cite{xie_parameterized_2023}\cite{anikin_efficient_2022}. Although there is a threshold it takes a significant amount of time on large scale graphs to converge \cite{wu_efficient_2024}. Monte Carlo based algorithms estimate node importance by simulating random walks over the graph \cite{avrachenkov_monte_2007}. For large graphs and high accuracy the algorithm requires a lot of these walks. Another approach only takes samples instead of the whole graph \cite{wu_approxrank_2009}\cite{bar-yossef_local_2008}. Sampling algorithms estimate the importance of a node by it's local area. Although this approach achieves a better runtime than other algorithms, the memory consumption is similar. Finally, matrix approximation-based PageRank algorithms reduce the rank of the matrix to simplify computations \cite{liu_fast_2015}. This results in faster computing time but usually the construction of low-rank matrices is high . Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. \\Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm \cite{xin_graphx_2013}. While GraphX was a huge step forward in distributed graph processing \cite{gonzalez_graphx_2014-1}, it has several limitations. %Since PageRank has been part of GraphX's first release and GraphX is not actively developed, it has not had any major updates since then.
-Especially, memory limitations arising from the use of power iterations \cite{page_pagerank_1999} and the use of RDD-based message passing become significant performance bottlenecks \cite{xin_graphx_2014}\cite{xin_graphx_2013}.
+Today there are many approximate PageRank implementations that address the computational overhead in the original implementation \cite{wu_efficient_2024}. They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing much \cite{xie_parameterized_2023}\cite{anikin_efficient_2022}. Although there is a threshold it takes a significant amount of time on large scale graphs to converge \cite{wu_efficient_2024}. Monte Carlo based algorithms estimate node importance by simulating random walks over the graph \cite{avrachenkov_monte_2007}. For large graphs and high accuracy the algorithm requires a lot of these walks. Another approach only takes samples instead of the whole graph \cite{wu_approxrank_2009}\cite{bar-yossef_local_2008}. Sampling algorithms estimate the importance of a node by it's local area. Although this approach achieves a better runtime than other algorithms, the memory consumption is similar. Finally, matrix approximation-based PageRank algorithms reduce the rank of the matrix to simplify computations \cite{liu_fast_2015}. This results in faster computing time but usually the construction of low-rank matrices is high . Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. \\Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm \cite{xin_graphx_2013}. While GraphX was a huge step forward in distributed graph processing \cite{gonzalez_graphx_2014-1}, it has several limitations. Especially, memory limitations arising from the use of power iterations \cite{page_pagerank_1999} and the use of RDD-based message passing become significant performance bottlenecks \cite{xin_graphx_2014}\cite{xin_graphx_2013}.
  
 
 \section{Approach}
