--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,20 @@
 
-@techreport{breyer_markovian_2002,
-	type = {Technical {Repot}},
-	title = {{MARKOVIAN} {PAGE} {RANKING} {DISTRIBUTIONS}: {SOME} {THEORY} {AND} {SIMULATIONS}},
-	url = {http://www.lbreyer.com/preprints.html.},
-	abstract = {We discuss some simple theoretical properties of web page ranking distributions, including PageRank (Brin and Page, 1998), which are based on uniformly ergodic Markov chains. We also propose a modiﬁcation of PageRank whith reduces the bias for older documents, and discuss details of our simulation programs.},
-	language = {en},
-	author = {Breyer, L A},
-	year = {2002},
+@inproceedings{weng_twitterrank_2010,
+	address = {New York, NY, USA},
+	series = {{WSDM} '10},
+	title = {{TwitterRank}: finding topic-sensitive influential twitterers},
+	isbn = {978-1-60558-889-6},
+	shorttitle = {{TwitterRank}},
+	url = {https://dl.acm.org/doi/10.1145/1718487.1718520},
+	doi = {10.1145/1718487.1718520},
+	abstract = {This paper focuses on the problem of identifying influential users of micro-blogging services. Twitter, one of the most notable micro-blogging services, employs a social-networking model called "following", in which each user can choose who she wants to "follow" to receive tweets from without requiring the latter to give permission first. In a dataset prepared for this study, it is observed that (1) 72.4\% of the users in Twitter follow more than 80\% of their followers, and (2) 80.5\% of the users have 80\% of users they are following follow them back. Our study reveals that the presence of "reciprocity" can be explained by phenomenon of homophily. Based on this finding, TwitterRank, an extension of PageRank algorithm, is proposed to measure the influence of users in Twitter. TwitterRank measures the influence taking both the topical similarity between users and the link structure into account. Experimental results show that TwitterRank outperforms the one Twitter currently uses and other related algorithms, including the original PageRank and Topic-sensitive PageRank.},
+	urldate = {2025-04-14},
+	booktitle = {Proceedings of the third {ACM} international conference on {Web} search and data mining},
+	publisher = {Association for Computing Machinery},
+	author = {Weng, Jianshu and Lim, Ee-Peng and Jiang, Jing and He, Qi},
+	month = feb,
+	year = {2010},
+	pages = {261--270},
 }
 
 @inproceedings{gonzalez_graphx_2014,
