next sampling methods

--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,7 @@ Today PageRank is used, not only in search engines, but in a wide range of appli
 
 
 \section{State of the Art}
-Today there are numerous approximate PageRank implementations that address the computational overhead in the original implementation  \cite{wu_efficient_2024}. They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing much \cite{xie_parameterized_2023}\cite{anikin_efficient_2022}. Although there is a threshold it takes a significant amount of time on large scale graphs to converge \cite{wu_efficient_2024}. Monte Carlo based algorithms estimate node importance by simulating random walks over the graph \cite{avrachenkov_monte_2007}. For large graphs and high accuracy the algorithm requires a lot of these walks. Another approach only takes samples instead of the whole graph \cite{wu_approxrank_2009}\cite{bar-yossef_local_2008}. Sampling algorithms estimate the importance of a node by it's local area. Although this approach achieves a better runtime than other algorithms, the memory consumption is similar. Finally, matrix approximation-based PageRank algorithms reduce the rank of the matrix to simplify computations \cite{liu_fast_2015}. This results in faster computing time but usually the construction of low-rank matrices is high . Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. \\Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm \cite{xin_graphx_2013}. While GraphX was a huge step forward in distributed graph processing \cite{gonzalez_graphx_2014-1}, it has several limitations. Especially, memory limitations arising from the use of power iterations \cite{page_pagerank_1999} and the use of RDD-based message passing become significant performance bottlenecks \cite{xin_graphx_2014}\cite{xin_graphx_2013}.
+Today there are numerous approximate PageRank implementations that address the computational overhead in the original implementation  \cite{wu_efficient_2024}. They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing \cite{xie_parameterized_2023}\cite{anikin_efficient_2022}. Although there is a threshold it takes a significant amount of time on large scale graphs to converge \cite{wu_efficient_2024}. Monte Carlo based algorithms estimate node importance by simulating random walks over the graph \cite{avrachenkov_monte_2007}. For large graphs and high accuracy the algorithm requires a lot of these walks. Another approach only takes samples instead of the whole graph \cite{wu_approxrank_2009}\cite{bar-yossef_local_2008}. Sampling algorithms estimate the importance of a node by it's local area. Although this approach achieves a better runtime than other algorithms, the memory consumption is similar. Finally, matrix approximation-based PageRank algorithms reduce the rank of the matrix to simplify computations \cite{liu_fast_2015}. This results in faster computing time but usually the construction of low-rank matrices is high . Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. \\Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm \cite{xin_graphx_2013}. While GraphX was a huge step forward in distributed graph processing \cite{gonzalez_graphx_2014-1}, it has several limitations. Especially, memory limitations arising from the use of power iterations \cite{page_pagerank_1999} and the use of RDD-based message passing become significant performance bottlenecks \cite{xin_graphx_2014}\cite{xin_graphx_2013}.
  
 
 \section{Approach}
